Modules/LancetHardwareDevice/DianaApi/include/DianaApiCommon.h

DIANA_API int getJointLinkPos(/*OUT[7]*/ double *joints, /*IN*/ const char *strIpAddress = "");
DIANA_API int createComplexPath(/*IN*/ int complex_path_type, /*OUT*/ unsigned int &complex_path_id,
                                /*IN*/ const char *strIpAddress = "");
DIANA_API int runComplexPath(/*IN*/ unsigned int complex_path_id, /*IN*/ const char *strIpAddress = "");
DIANA_API int destroyComplexPath(/*IN*/ unsigned int complex_path_id, /*IN*/ const char *strIpAddress = "");
DIANA_API int saveEnvironment(const char *strIpAddress = "");
DIANA_API int dumpToUDisk(/*IN*/ double timeout_second, /*IN*/ const char *strIpAddress = "");
DIANA_API int enterForceMode_ex(/*IN[3]*/ double *dblForceDirection, /*[IN]*/ double dblForceValue,
                                /*[IN]*/ double dblMaxApproachVelocity, /*[IN]*/ double dblMaxAllowTcpOffset,
                                /*IN[6]*/ double *dblActiveTcp = nullptr, /*IN*/ const char *strIpAddress = "");
DIANA_API int readDI(/*IN*/ const char *groupName, /*IN*/ const char *IOName, /*OUT*/ int &value,
                     /*IN*/ const char *strIpAddress = "");
DIANA_API int readAI(/*IN*/ const char *groupName, /*IN*/ const char *IOName, /*OUT*/ int &mode, /*OUT*/ double &value,
                     /*IN*/ const char *strIpAddress = "");