Plugins/org.mitk.lancet.CZXtest/DianaApi/X64/include/DianaApiSpecial.h

DIANA_API int inverse_ext(/*IN[7]*/ double *ref_joints, /*IN[6]*/ double *pose, /*OUT[7]*/ double *joints,
                          /*IN[6]*/ double *active_tcp = nullptr, /*IN*/ const char *strIpAddress = "");
DIANA_API int addMoveLByTarget(/*IN*/ unsigned int complex_path_id, /*IN[7]*/ double *target_joints, /*IN*/ double vel,
                               /*IN*/ double acc, /*IN*/ double blendradius, /*IN*/ int zv_shaper_order = 0,
                               /*IN*/ double zv_shaper_frequency = 0, /*IN*/ double zv_shaper_damping_ratio = 0,
                               /*IN*/ bool avoid_singular = false,
                               /*IN*/ const char *strIpAddress = "");
DIANA_API int addMoveLByPose(/*IN*/ unsigned int complex_path_id, /*IN[6]*/ double *target_pose, /*IN*/ double vel,
                             /*IN*/ double acc, /*IN*/ double blendradius, /*IN*/ int zv_shaper_order = 0,
                             /*IN*/ double zv_shaper_frequency = 0, /*IN*/ double zv_shaper_damping_ratio = 0,
                             /*IN*/ bool avoid_singular = false,
                             /*IN*/ const char *strIpAddress = "");
DIANA_API int addMoveJByTarget(/*IN*/ unsigned int complex_path_id, /*IN[7]*/ double *target_joints,
                               /*IN*/ double vel_percent, /*IN*/ double acc_percent, /*IN*/ double blendradius_percent,
                               /*IN*/ int zv_shaper_order = 0, /*IN*/ double zv_shaper_frequency = 0,
                               /*IN*/ double zv_shaper_damping_ratio = 0,
                               /*IN*/ const char *strIpAddress = "");
DIANA_API int addMoveJByPose(/*IN*/ unsigned int complex_path_id, /*IN[6]*/ double *target_pose,
                             /*IN*/ double vel_percent, /*IN*/ double acc_percent, /*IN*/ double blendradius_percent,
                             /*IN*/ int zv_shaper_order = 0, /*IN*/ double zv_shaper_frequency = 0,
                             /*IN*/ double zv_shaper_damping_ratio = 0,
                             /*IN*/ const char *strIpAddress = "");
DIANA_API int addMoveCByTarget(/*IN*/ unsigned int complex_path_id, /*IN[7]*/ double *pass_joints,
                               /*IN[7]*/ double *target_joints, /*IN*/ double vel, /*IN*/ double acc,
                               /*IN*/ double blendradius, /*IN*/ bool ignore_rotation, /*IN*/ int zv_shaper_order = 0,
                               /*IN*/ double zv_shaper_frequency = 0, /*IN*/ double zv_shaper_damping_ratio = 0,
                               /*IN*/ bool avoid_singular = false,
                               /*IN*/ const char *strIpAddress = "");
DIANA_API int addMoveCByPose(/*IN*/ unsigned int complex_path_id, /*IN[6]*/ double *pass_pose,
                             /*IN[6]*/ double *target_pose, /*IN*/ double vel, /*IN*/ double acc,
                             /*IN*/ double blendradius, /*IN*/ bool ignore_rotation, /*IN*/ int zv_shaper_order = 0,
                             /*IN*/ double zv_shaper_frequency = 0, /*IN*/ double zv_shaper_damping_ratio = 0,
                             /*IN*/ bool avoid_singular = false,
                             /*IN*/ const char *strIpAddress = "");
DIANA_API int readDO(/*IN*/ const char *groupName, /*IN*/ const char *IOName, /*OUT*/ int &value,
                     /*IN*/ const char *strIpAddress = "");
DIANA_API int readAO(/*IN*/ const char *groupName, /*IN*/ const char *IOName, /*OUT*/ int &mode, /*OUT*/ double &value,
                     /*IN*/ const char *strIpAddress = "");