Modules/LancetHardwareDevice/DianaApi/Release/DianaApi.py


def inverse_ext(ref_joints, pose, joints, ipAddress=''):
    refJointsPosition = DIANA_JOINTS_POSITION()
    refJointsPosition.values = (c_double * 7)()
    for index in range(0, len(ref_joints)):
        refJointsPosition.values[index] = ref_joints[index]
    dianaTcpPose = DIANA_TCP_POSE()
    dianaTcpPose.values = (c_double * 6)()
    for index in range(0, len(dianaTcpPose.values)):
        dianaTcpPose.values[index] = pose[index]
    dianaJointsPosition = DIANA_JOINTS_POSITION()
    dianaJointsPosition.values = (c_double * 7)()
    active_tcp = c_void_p(0)
    api_mod.inverse_ext.argtypes = [POINTER(DIANA_JOINTS_POSITION), POINTER(DIANA_TCP_POSE), POINTER(
        DIANA_JOINTS_POSITION),  c_void_p, c_char_p]
    api_mod.inverse_ext.restype = c_int
    ret = api_mod.inverse_ext(refJointsPosition, dianaTcpPose,
                              byref(dianaJointsPosition), active_tcp, bytes(ipAddress.encode('utf-8')))
    for index in range(0, len(joints)):
        joints[index] = dianaJointsPosition.values[index]
    return message(ret)


def getJointLinkPos(joints, ipAddress=''):
    dianaJointPos = DIANA_JOINTS_POSITION()
    dianaJointPos.values = (c_double*7)()
    for index in range(0, len(joints)):
        dianaJointPos.values[index] = joints[index]
    api_mod.getJointLinkPos.argtypes = [
        POINTER(DIANA_JOINTS_POSITION), c_char_p]
    api_mod.getJointLinkPos.restype = c_int
    ret = api_mod.getJointLinkPos(
        byref(dianaJointPos), bytes(ipAddress.encode('utf-8')))
    for index in range(0, len(joints)):
        joints[index] = dianaJointPos.values[index]
    return message(ret)


def createComplexPath(path_type, ipAddress=''):
    complex_path_id = c_uint()
    api_mod.createComplexPath.argtypes = [c_int, POINTER(c_uint), c_char_p]
    api_mod.createComplexPath.restype = c_int
    ret = api_mod.createComplexPath(path_type.value, byref(
        complex_path_id), bytes(ipAddress.encode('utf-8')))
    return ret, complex_path_id


def addMoveLSegmentByTarget(complex_path_id, joints, vel, acc, blendradius, zv_shaper_order=0, zv_shaper_frequency=0, zv_shaper_damping_ratio=0, avoid_singular = False, ipAddress=''):
    dianaJointPos = DIANA_JOINTS_POSITION()
    dianaJointPos.values = (c_double * 7)()
    for index in range(0, len(joints)):
        dianaJointPos.values[index] = joints[index]
    api_mod.addMoveLByTarget.argtypes = [c_uint, POINTER(
        DIANA_JOINTS_POSITION), c_double, c_double, c_double, c_int, c_double, c_double, c_bool,c_char_p]
    api_mod.addMoveLByTarget.restype = c_int
    ret = api_mod.addMoveLByTarget(
        complex_path_id, dianaJointPos, vel, acc, blendradius, zv_shaper_order, zv_shaper_frequency, zv_shaper_damping_ratio, 
        avoid_singular,bytes(ipAddress.encode('utf-8')))
    return message(ret)


def addMoveLSegmentByPose(complex_path_id, pose, vel, acc, blendradius, zv_shaper_order=0, zv_shaper_frequency=0, zv_shaper_damping_ratio=0, avoid_singular = False, ipAddress=''):
    dianaTcpPose = DIANA_TCP_POSE()
    dianaTcpPose.values = (c_double * 6)()
    for index in range(0, len(dianaTcpPose.values)):
        dianaTcpPose.values[index] = pose[index]
    api_mod.addMoveLByPose.argtypes = [c_uint, POINTER(
        DIANA_TCP_POSE), c_double, c_double, c_double, c_int, c_double, c_double, c_bool, c_char_p]
    api_mod.addMoveLByPose.restype = c_int
    ret = api_mod.addMoveLByPose(
        complex_path_id, dianaTcpPose, vel, acc, blendradius, zv_shaper_order, zv_shaper_frequency, zv_shaper_damping_ratio, avoid_singular,bytes(ipAddress.encode('utf-8')))
    return message(ret)


def addMoveJSegmentByTarget(complex_path_id, joints, vel_percent, acc_percent, blendradius_percent, zv_shaper_order=0, zv_shaper_frequency=0, zv_shaper_damping_ratio=0, ipAddress=''):
    dianaJointPos = DIANA_JOINTS_POSITION()
    dianaJointPos.values = (c_double * 7)()
    for index in range(0, len(joints)):
        dianaJointPos.values[index] = joints[index]
    api_mod.addMoveJByTarget.argtypes = [c_uint, POINTER(
        DIANA_JOINTS_POSITION), c_double, c_double, c_double, c_int, c_double, c_double, c_char_p]
    api_mod.addMoveJByTarget.restype = c_int
    ret = api_mod.addMoveJByTarget(
        complex_path_id, dianaJointPos, vel_percent, acc_percent, blendradius_percent, zv_shaper_order, zv_shaper_frequency, zv_shaper_damping_ratio, bytes(ipAddress.encode('utf-8')))
    return message(ret)


def addMoveJSegmentByPose(complex_path_id, pose, vel_percent, acc_percent, blendradius_percent, zv_shaper_order=0, zv_shaper_frequency=0, zv_shaper_damping_ratio=0, ipAddress=''):
    dianaTcpPose = DIANA_TCP_POSE()
    dianaTcpPose.values = (c_double * 6)()
    for index in range(0, len(dianaTcpPose.values)):
        dianaTcpPose.values[index] = pose[index]
    api_mod.addMoveJByPose.argtypes = [c_uint, POINTER(
        DIANA_TCP_POSE), c_double, c_double, c_double, c_int, c_double, c_double, c_char_p]
    api_mod.addMoveJByPose.restype = c_int
    ret = api_mod.addMoveJByPose(
        complex_path_id, dianaTcpPose, vel_percent, acc_percent, blendradius_percent, zv_shaper_order, zv_shaper_frequency, zv_shaper_damping_ratio, bytes(ipAddress.encode('utf-8')))
    return message(ret)


def addMoveCSegmentByTarget(complex_path_id, pass_joints, target_joints, vel, acc, blendradius, ignore_rotation, zv_shaper_order=0, zv_shaper_frequency=0, zv_shaper_damping_ratio=0, avoid_singular = False, ipAddress=''):
    dianaPassJointPos = DIANA_JOINTS_POSITION()
    dianaPassJointPos.values = (c_double * 7)()
    dianaTargetJointPos = DIANA_JOINTS_POSITION()
    dianaTargetJointPos.values = (c_double * 7)()
    for index in range(0, len(pass_joints)):
        dianaPassJointPos.values[index] = pass_joints[index]
    for index in range(0, len(target_joints)):
        dianaTargetJointPos.values[index] = target_joints[index]
    api_mod.addMoveCByTarget.argtypes = [c_uint, POINTER(DIANA_JOINTS_POSITION), POINTER(
        DIANA_JOINTS_POSITION), c_double, c_double, c_double, c_bool, c_int, c_double, c_double, c_bool, c_char_p]
    api_mod.addMoveCByTarget.restype = c_int
    ret = api_mod.addMoveCByTarget(complex_path_id, dianaPassJointPos,
                                   dianaTargetJointPos, vel, acc, blendradius, ignore_rotation, zv_shaper_order, zv_shaper_frequency, zv_shaper_damping_ratio, avoid_singular,bytes(ipAddress.encode('utf-8')))
    return message(ret)


def addMoveCSegmentByPose(complex_path_id, pass_pose, target_pose, vel, acc, blendradius, ignore_rotation, zv_shaper_order=0, zv_shaper_frequency=0, zv_shaper_damping_ratio=0, avoid_singular = False, ipAddress=''):
    dianaPassTcpPose = DIANA_TCP_POSE()
    dianaPassTcpPose.values = (c_double * 6)()
    dianaTargetTcpPose = DIANA_TCP_POSE()
    dianaTargetTcpPose.values = (c_double * 6)()
    for index in range(0, len(dianaPassTcpPose.values)):
        dianaPassTcpPose.values[index] = pass_pose[index]
    for index in range(0, len(dianaTargetTcpPose.values)):
        dianaTargetTcpPose.values[index] = target_pose[index]
    api_mod.addMoveCByPose.argtypes = [c_uint, POINTER(DIANA_TCP_POSE), POINTER(
        DIANA_TCP_POSE), c_double, c_double, c_double, c_bool, c_int, c_double, c_double, c_bool, c_char_p]
    api_mod.addMoveCByPose.restype = c_int
    ret = api_mod.addMoveCByPose(complex_path_id, dianaPassTcpPose,
                                 dianaTargetTcpPose, vel, acc, blendradius, ignore_rotation, zv_shaper_order, zv_shaper_frequency, zv_shaper_damping_ratio, avoid_singular,bytes(ipAddress.encode('utf-8')))
    return message(ret)


def runComplexPath(complex_path_id, ipAddress=''):
    api_mod.runComplexPath.argtypes = [c_uint, c_char_p]
    api_mod.runComplexPath.restype = c_int
    ret = api_mod.runComplexPath(
        complex_path_id, bytes(ipAddress.encode('utf-8')))
    return message(ret)


def destroyComplexPath(complex_path_id, ipAddress=''):
    api_mod.destroyComplexPath.argtypes = [c_uint, c_char_p]
    api_mod.destroyComplexPath.restype = c_int
    ret = api_mod.destroyComplexPath(complex_path_id, bytes(
        ipAddress.encode('utf-8')), bytes(ipAddress.encode('utf-8')))
    return message(ret)


def saveEnvironment(ipAddress=''):
    api_mod.saveEnvironment.argtypes = [c_char_p]
    api_mod.saveEnvironment.restype = c_int
    ret = api_mod.saveEnvironment(bytes(ipAddress.encode('utf-8')))
    return message(ret)

###################### version 0.10#########################


def dumpToUDisk(timeout_second, ipAddress=''):
    api_mod.dumpToUDisk.restype = c_int
    api_mod.dumpToUDisk.argtypes = [c_double, c_char_p]
    ret = api_mod.dumpToUDisk(
        timeout_second, bytes(ipAddress.encode('utf-8')))
    return message(ret)


def enterForceMode_ex(forceDirection, forceValue, maxApproachVelocity, maxAllowTcpOffset, active_tcp=None, ipAddress=''):
    arr_ForceDirection = DIANA_FORCE_DIRECTION()
    arr_ForceDirection.values = (c_double*3)()
    for index in range(0, len(arr_ForceDirection.values)):
        arr_ForceDirection.values[index] = forceDirection[index]
    ret = 0
    if active_tcp==None:
        use_active_tcp = c_void_p(0)
        api_mod.enterForceMode_ex.restype = c_int
        api_mod.enterForceMode_ex.argtypes = [POINTER(
            DIANA_FORCE_DIRECTION), c_double, c_double, c_double, c_void_p, c_char_p]
        ret = api_mod.enterForceMode_ex(byref(
            arr_ForceDirection), forceValue, maxApproachVelocity, maxAllowTcpOffset, use_active_tcp, bytes(ipAddress.encode('utf-8')))
    else:
        arr_Active_Tcp = DIANA_ACTIVE_TCP()
        arr_Active_Tcp.values = (c_double*6)()
        for index in range(0, len(arr_Active_Tcp.values)):
            arr_Active_Tcp.values[index] = active_tcp[index]
        api_mod.enterForceMode_ex.restype = c_int
        api_mod.enterForceMode_ex.argtypes = [POINTER(
            DIANA_FORCE_DIRECTION), c_double, c_double, c_double, POINTER(DIANA_ACTIVE_TCP), c_char_p]
        ret = api_mod.enterForceMode_ex(byref(
            arr_ForceDirection), forceValue, maxApproachVelocity, maxAllowTcpOffset, byref(arr_Active_Tcp), bytes(ipAddress.encode('utf-8')))
    return message(ret)


def readDI(group_name, di_name, ipAddress=''):
    DIValue = c_int()
    api_mod.readDI.argtypes = [c_char_p, c_char_p, POINTER(c_int), c_char_p]
    api_mod.readDI.restype = c_int
    ret = api_mod.readDI(bytes(group_name, encoding="utf-8"),
                         bytes(di_name, encoding="utf-8"), byref(DIValue), bytes(ipAddress.encode('utf-8')))
    return ret, DIValue

def readDO(group_name, di_name, ipAddress=''):
    DOValue = c_int()
    api_mod.readDO.argtypes = [c_char_p, c_char_p, POINTER(c_int), c_char_p]
    api_mod.readDO.restype = c_int
    ret = api_mod.readDO(bytes(group_name, encoding="utf-8"),
                         bytes(di_name, encoding="utf-8"), byref(DOValue), bytes(ipAddress.encode('utf-8')))
    return ret, DOValue

def readAI(group_name, di_name, ipAddress=''):
    AIValue = c_double()
    AIMode = c_int()
    api_mod.readAI.argtypes = [c_char_p, c_char_p,
                               POINTER(c_int), POINTER(c_double), c_char_p]
    api_mod.readAI.restype = c_int
    ret = api_mod.readAI(bytes(group_name, encoding="utf-8"),
                         bytes(di_name, encoding="utf-8"), byref(AIMode), byref(AIValue), bytes(ipAddress.encode('utf-8')))
    return ret, AIMode, AIValue

def readAO(group_name, do_name, ipAddress=''):
    AOValue = c_double()
    AOMode = c_int()
    api_mod.readAO.argtypes = [c_char_p, c_char_p,
                               POINTER(c_int), POINTER(c_double), c_char_p]
    api_mod.readAO.restype = c_int
    ret = api_mod.readAO(bytes(group_name, encoding="utf-8"),
                         bytes(do_name, encoding="utf-8"), byref(AOMode), byref(AOValue), bytes(ipAddress.encode('utf-8')))
    return ret, AOMode, AOValue
